# flake8_isolated_packages

./: LICENSE  Makefile  README.md  flake8_isolated_imports.py  flake8_isolated_packages.py  pyproject.toml  setup.cfg  setup.py
tests/: conftest.py  test_flake8_isolated_imports.py  test_flake8_isolated_packages.py
