[tool.poetry]
name = "flake8_isolated_packages"
version = "2.2.0"
description = "This Flake8 plugin is for checking imports isolations."
authors = ["Dudov Dmitry <dudov.dm@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DDmitiy/flake8_isolated_packages"
repository = "https://github.com/DDmitiy/flake8_isolated_packages"
keywords = ["flake8_isolated_packages", "flake8", "plugin", "isolated_packages"]

[tool.poetry.plugins."flake8.extension"]
FIP = "flake8_isolated_packages:Plugin"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = ">=3.0"
astpretty = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
twine = "^3.4.1"
