[metadata]
name = flake8_isolated_packages
version = 0.1.1
description-file = README.md

[options]
py_modules = flake8_isolated_packages
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"

[options.entry_points]
flake8.extension =
    FII = flake8_isolated_packages:Plugin

[flake8]
isolated_packages = tests
max-complexity = 10
max-line-length = 120
show-source = true